--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My First Website</title>
+  <title>Just my test site</title>
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <p>This is my first hosted website for JTC 372.</p>
+  <h1>Hey there :)</h1>
+  <p>This is my first website for JTC 372.  
+  Nothing fancy here... just testing stuff out!</p>
 </body>
 </html>
